--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                 <td>Petri</td>
                 <td>6</td>
             </tr>
-            <tr class="alpha">
+            <tr class="ferrari">
                 <td>7</td>
                 <td>Pesca</td>
-                <td>0</td>
+                <td>1</td>
             </tr>
-            <tr class="ferrari">
+            <tr class="alpha">
                 <td>8</td>
                 <td>Vincenzo</td>
-                <td>1</td>
+                <td>0</td>
             </tr>
             <tr>
  
@@ -353,7 +353,7 @@
 <div class="header">
     Prossimo GP
 <p></p>
-   IMOLA
+   SPAGNA
    <br>
    <br>
 </div>
