--- a/index.html
+++ b/index.html
@@ -44,42 +44,42 @@
                 <th>PUNTI</th>
             </tr>
             <tr class="" id="n1">
-                <td id="Pos1"></td>
-                <td id="Nome1"></td>
-                <td id="Punti1"></td>
+                <td id="pos1">1</td>
+                <td id="nome1"></td>
+                <td id="punti1"></td>
             </tr>
             <tr class="" id="n2">
-                <td id="Pos2"></td>
-                <td id="Nome2"></td>
-                <td id="Punti2"></td>
+                <td id="pos2">2</td>
+                <td id="nome2"></td>
+                <td id="punti2"></td>
             </tr>
             <tr class="" id="n3">
-                <td id="pos3"></td>
+                <td id="pos3">3</td>
                 <td id="nome3"></td>
                 <td id="punti3"></td>
             </tr>
             <tr class="" id="n4">
-                <td id="pos4"></td>
+                <td id="pos4">4</td>
                 <td id="nome4"></td>
                 <td id="punti4"></td>
             </tr>
             <tr class="" id="n5">
-                <td id="pos5"></td>
+                <td id="pos5">5</td>
                 <td id="nome5"></td>
                 <td id="punti5"></td>
             </tr>
             <tr class="" id="n6">
-                <td id="pos6"></td>
+                <td id="pos6">6</td>
                 <td id="nome6"></td>
                 <td id="punti6"></td>
             </tr>
             <tr class="" id="n7">
-                <td id="pos7"></td>
+                <td id="pos7">7</td>
                 <td id="nome7"></td>
                 <td id="punti7"></td>
             </tr>
             <tr class="" id="n8">
-                <td id="pos8"></td>
+                <td id="pos8">8</td>
                 <td id="nome8"></td>
                 <td id="punti8"></td>
             </tr>
@@ -98,25 +98,25 @@
                 <th>SCUDERIA</th>
                 <th>PUNTI</th>
             </tr>
-            <tr class="williams">
+            <tr class="" id="s1">
                 <td>1</td>
-                <td>Williams</td>
-                <td>125</td>
+                <td id="nomes1"></td>
+                <td id="puntis1"></td>
             </tr>
-            <tr class="ferrari">
+            <tr class="" id="s2">
                 <td>2</td>
-                <td>Ferrari</td>
-                <td>53</td>
+                <td id="nomes2"></td>
+                <td id="puntis2"></td>
             </tr>
-            <tr class="mercedes">
+            <tr class="" id="s3">
                 <td>3</td>
-                <td>Mercedes</td>
-                <td>28</td>
+                <td id="nomes3"></td>
+                <td id="puntis3"></td>
             </tr>
-            <tr class="alpha">
+            <tr class="" id="s4">
                 <td>4</td>
-                <td>Alpha tauri</td>
-                <td>6</td>
+                <td id="nomes4"></td>
+                <td id="puntis4"></td>
             </tr>
 
  
@@ -134,7 +134,6 @@
 
     <div class="lead left">
         BAHRAIN <br>
-        <button onclick="bahrain()">gg</button>
         <img class="circ-img"src="gp-bahrain.avif" alt="gp bahrain">
                 <br>
                 
@@ -202,41 +201,41 @@
                 <th>PILOTI</th>
                 <th>PUNTI</th>
             </tr>
-            <tr class="williams" >
+            <tr class="Williams" >
                 <td>1</td>
                 <td>Gaetano</td>
                 <td style="background-color: rgba(172, 53, 252, 0.731);">26</td>
             </tr>
-            <tr class="ferrari">
+            <tr class="Ferrari">
                 <td>2</td>
                 <td>Ago</td>
                 <td>18</td>
             </tr>
-            <tr class="williams">
+            <tr class="Williams">
                 <td>3</td>
                 <td>Frara</td>
                 <td>15</td>
             </tr>
-            <tr class="alpha">
+            <tr class="Alpha">
                 <td>12</td>
                 <td>Petri</td>
                 <td>0</td>
             </tr>
-            <tr class="alpha">
+            <tr class="Alpha">
                 <td>RIT</td>
                 <td>Vincenzo</td>
                 <td>0</td>
-                <tr class="mercedes">
+                <tr class="Mercedes">
                     <td>RIT</td>
                     <td>Nick</td>
                     <td>0</td>
                     <tr>
 
-                            <tr class="ferrari">
+                            <tr class="Ferrari">
                                 <td>RIT</td>
                                 <td>Pesca</td>
                                 <td>0</td>
-                                <tr class="mercedes">
+                                <tr class="Mercedes">
                                     <td>RIT</td>
                                     <td>Gem</td>
                                     <td>0</td>
@@ -254,41 +253,41 @@
                 <th>PILOTI</th>
                 <th>PUNTI</th>
             </tr>
-            <tr class="williams" >
+            <tr class="Williams" >
                 <td>6</td>
                 <td>Frara</td>
                 <td style="background-color: rgba(172, 53, 252, 0.731);"> 9</td>
             </tr>
-            <tr class="alpha">
+            <tr class="Alpha">
                 <td>8</td>
                 <td>Petri</td>
                 <td>2</td>
             </tr>
-            <tr class="williams">
+            <tr class="Williams">
                 <td>RIT</td>
                 <td>Gaetano</td>
                 <td>0</td>
             </tr>
-            <tr class="alpha">
+            <tr class="Alpha">
                 <td>RIT</td>
                 <td>Vincenzo</td>
                 <td>0</td>
             </tr>
-            <tr class="mercedes">
+            <tr class="Mercedes">
                 <td>RIT</td>
                 <td>Nick</td>
                 <td>0</td>
-                <tr class="ferrari">
+                <tr class="Ferrari">
                     <td>RIT</td>
                     <td>Pesca</td>
                     <td>0</td>
                     <tr>
 
-                            <tr class="ferrari">
+                            <tr class="Ferrari">
                                 <td>SQ</td>
                                 <td>Ago</td>
                                 <td>0</td>
-                                <tr class="mercedes">
+                                <tr class="Mercedes">
                                     <td>SQ</td>
                                     <td>Gem</td>
                                     <td>0</td>
@@ -307,41 +306,41 @@
                 <th>PILOTI</th>
                 <th>PUNTI</th>
             </tr>
-            <tr class="williams" >
+            <tr class="Williams" >
                 <td>1 </td>
                 <td>Gaetano </td>
                 <td>25 </td>
             </tr>
-            <tr class="ferrari">
+            <tr class="Ferrari">
                 <td>2 </td>
                 <td>Ago </td>
                 <td style="background-color: rgba(172, 53, 252, 0.731);"> 19</td>
             </tr>
-            <tr class="williams">
+            <tr class="Williams">
                 <td>4 </td>
                 <td> Frara</td>
                 <td> 12</td>
             </tr>
-            <tr class="ferrari">
+            <tr class="Ferrari">
                 <td>10 </td>
                 <td> Pesca</td>
                 <td> 1</td>
             </tr>
-            <tr class="alpha">
+            <tr class="Alpha">
                 <td> RIT</td>
                 <td>Vincenzo </td>
                 <td> 0</td>
-                <tr class="mercedes">
+                <tr class="Mercedes">
                     <td>RIT </td>
                     <td> Nick</td>
                     <td>0 </td>
                     <tr>
 
-                            <tr class="alpha">
+                            <tr class="Alpha">
                                 <td> SQ</td>
                                 <td>Petri </td>
                                 <td> 0</td>
-                                <tr class="mercedes">
+                                <tr class="Mercedes">
                                     <td>SQ </td>
                                     <td>Gem </td>
                                     <td> 0</td>
